fix ui overflow

--- a/client/src/index.less
+++ b/client/src/index.less
@@ -80,7 +80,7 @@ input:-webkit-autofill {
 .home {
   height: 100vh;
   background-color: var(--background);
-  overflow: auto;
+  // overflow: auto;
   .wrapper {
     height: 100%;
     display: grid;
